feat: cors fixes
